--- a/MILKERS/vercel.json
+++ b/MILKERS/vercel.json
@@ -3,4 +3,8 @@
   "builds": [
     { "src": "api/random.js", "use": "@vercel/node" }
   ]
+    "routes": [
+    { "src": "/api/random", "dest": "api/random.js" }
+  ]
 }
+
